--- a/Carteleras.html
+++ b/Carteleras.html
@@ -1,153 +1,213 @@
 <!DOCTYPE html>
 <html lang="es">
+
 <head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="EstiloPaginaCarteleras.css">
-    <link rel="stylesheet" type="text/css" href="normalize.css">
-    <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
-    <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
-    <title>Lista de Eventos UFC</title>
+  <meta charset="UTF-8" />
+  <link rel="stylesheet" type="text/css" href="EstiloPaginaCarteleras.css" />
+  <link rel="stylesheet" type="text/css" href="normalize.css" />
+  <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css" />
+  <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico" />
+  <title>Lista de Eventos UFC</title>
 </head>
+
 <body>
-        <header>
-        <nav>
-            <a href="Carteleras.html" class="menu-item left-menu">
-                Eventos
-            </a>
-            <a href="Rankings.html" class="menu-item left-menu">
-                Rankings
-            </a>
-            <a href="Index.html" class="menu-item ufc-logo">
-                UFC
-            </a>
-            <a href="Peleadores.html" class="menu-item right-menu">
-                Peleadores
-            </a>
-            <a href="Tienda.html" class="menu-item right-menu">
-                Tienda
-            </a>
-        </nav>
-    </header>
-    <div class="lista-container">
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC297.html"><img src="Imagenes pagina ufc/Sean Strickland.jpg"><img src="Imagenes pagina ufc/Dricus DuPlessis.jpg"><br><p>Sean Strickland vs Dricus Du Plessis</p><br>UFC 297</a>
-                </div>
-
-            </div>
-            
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC296.html"><img src="Imagenes pagina ufc/Leon Edwards.jpg"><img src="Imagenes pagina ufc/Colby Covington.jpg"><br><p>Leon Edwards vs Colby Covington</p><br>UFC 296</a>
-                </div>
-
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC295.html"><img src="Imagenes pagina ufc/Alex Pereira.jpg"><img src="Imagenes pagina ufc/Jiri Prochazka.jpg"><br><p>Alex Pereira vs Jiri Prochazka</p><br>UFC 295</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC294.html"><img src="Imagenes pagina ufc/Islam Makhachev.jpg"><img src="Imagenes pagina ufc/Alexander Volkanovski.jpg"><br><p>Islam Makhachev vs Alexander Volkanovski 2</p><br>UFC 294</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC293.html"><img src="Imagenes pagina ufc/Sean Strickland.jpg"><img src="Imagenes pagina ufc/Israel Adesanya.jpg"><br><p>Sean Strickland vs Israel Adesanya</p><br>UFC 293</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC292.html"><img src="Imagenes pagina ufc/Sean OMalley.jpg"><img src="Imagenes pagina ufc/Aljamain Sterling.jpg"><br><p>Sean O´Malley vs Aljamain Sterling</p><br>UFC 292</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC291.html"><img src="Imagenes pagina ufc/Justin Gaethje.jpg"><img src="Imagenes pagina ufc/Dustin Poirier.jpg"><br><p>Justin Gaethje vs Dustin Poirier 2</p><br>UFC 291</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC290.html"><img src="Imagenes pagina ufc/Alexander Volkanovski.jpg"><img src="Imagenes pagina ufc/Yair Rodriguez.jpg"><br><p>Alexander Volkanovski vs Yair Rodriguez</p><br>UFC 290</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC289.html"><img src="Imagenes pagina ufc/Amanda Nunes.jpg"><img src="Imagenes pagina ufc/Irene Aldana.jpg"><br><p>Amanda Nunes vs Irene Aldana</p><br>UFC 289</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC288.html"><img src="Imagenes pagina ufc/Aljamain Sterling.jpg"><img src="Imagenes pagina ufc/Henry Cejudo.jpg"><br><p>Aljamain Sterling vs Henry Cejudo</p><br>UFC 288</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC287.html"><img src="Imagenes pagina ufc/Israel Adesanya.jpg"><img src="Imagenes pagina ufc/Alex Pereira.jpg"><br><p>Israel Adesanya vs Alex Pereira 2</p><br>UFC 287</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC286.html"><img src="Imagenes pagina ufc/Leon Edwards.jpg"><img src="Imagenes pagina ufc/Kamaru Usman.jpg"><br><p>Leon Edwards vs Kamaru Usman 3</p><br>UFC 286</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC285.html"><img src="Imagenes pagina ufc/Jon Jones.jpg"><img src="Imagenes pagina ufc/Ciryl Gane.jpg"><br><p>Jon Jones vs Ciryl Gane</p><br>UFC 285</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC284.html"><img src="Imagenes pagina ufc/Islam Makhachev.jpg"><img src="Imagenes pagina ufc/Alexander Volkanovski.jpg"><br><p>Islam Makhachev vs Alexander Volkanovski</p><br>UFC 284</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                    <a href="Carteleras/UFC283.html"><img src="Imagenes pagina ufc/Jamahall Hill.jpg"><img src="Imagenes pagina ufc/Glover Teixeira.jpg"><br><p>Jamahall Hill vs Glover Teixeira</p><br>UFC 283</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC282.html"><img src="Imagenes pagina ufc/Jan Blachowicz.jpg"><img src="Imagenes pagina ufc/Magomed Ankalaev.jpg"><br><p>Jan Blachowicz vs Magomed Ankalaev</p><br>UFC 282</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC281.html"><img src="Imagenes pagina ufc/Alex Pereira.jpg"><img src="Imagenes pagina ufc/Israel Adesanya.jpg"><br><p>Alex Pereira vs Israel Adesanya</p><br>UFC 281</a>
-                </div>
-            </div>
-
-            <div class="eventosNumerados">
-                <div>
-                   <a href="Carteleras/UFC280.html"><img src="Imagenes pagina ufc/Islam Makhachev.jpg"><img src="Imagenes pagina ufc/Charles Oliveira.jpg"><br><p>Islam Makhachev vs Charles Oliveira</p><br>UFC 280</a>
-                </div>
-            </div>
-
-            <!-- Agrega más elementos según sea necesario -->
+  <header>
+    <nav>
+      <a href="Carteleras.html" class="menu-item left-menu"> Eventos </a>
+      <a href="Rankings.html" class="menu-item left-menu"> Rankings </a>
+      <a href="Index.html" class="menu-item ufc-logo"> UFC </a>
+      <a href="Peleadores.html" class="menu-item right-menu"> Peleadores </a>
+      <a href="Tienda.html" class="menu-item right-menu"> Tienda </a>
+    </nav>
+  </header>
+  <div class="lista-container">
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC297.html"><img src="Imagenes pagina ufc/Sean Strickland.jpg" /><img
+            src="Imagenes pagina ufc/Dricus DuPlessis.jpg" /><br />
+          <p>Sean Strickland vs Dricus Du Plessis</p>
+          <br />UFC 297
+        </a>
+      </div>
     </div>
-        <footer id="footer">
-       <div class="content-footer">
-         <label class="lbl-footer">Todos los derechos reservados ©</label>
-       </div>
-    </footer>
 
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC296.html"><img src="Imagenes pagina ufc/Leon Edwards.jpg" /><img
+            src="Imagenes pagina ufc/Colby Covington.jpg" /><br />
+          <p>Leon Edwards vs Colby Covington</p>
+          <br />UFC 296
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC295.html"><img src="Imagenes pagina ufc/Alex Pereira.jpg" /><img
+            src="Imagenes pagina ufc/Jiri Prochazka.jpg" /><br />
+          <p>Alex Pereira vs Jiri Prochazka</p>
+          <br />UFC 295
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC294.html"><img src="Imagenes pagina ufc/Islam Makhachev.jpg" /><img
+            src="Imagenes pagina ufc/Alexander Volkanovski.jpg" /><br />
+          <p>Islam Makhachev vs Alexander Volkanovski 2</p>
+          <br />UFC 294
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC293.html"><img src="Imagenes pagina ufc/Sean Strickland.jpg" /><img
+            src="Imagenes pagina ufc/Israel Adesanya.jpg" /><br />
+          <p>Sean Strickland vs Israel Adesanya</p>
+          <br />UFC 293
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC292.html"><img src="Imagenes pagina ufc/Sean OMalley.jpg" /><img
+            src="Imagenes pagina ufc/Aljamain Sterling.jpg" /><br />
+          <p>Sean O´Malley vs Aljamain Sterling</p>
+          <br />UFC 292
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC291.html"><img src="Imagenes pagina ufc/Justin Gaethje.jpg" /><img
+            src="Imagenes pagina ufc/Dustin Poirier.jpg" /><br />
+          <p>Justin Gaethje vs Dustin Poirier 2</p>
+          <br />UFC 291
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC290.html"><img src="Imagenes pagina ufc/Alexander Volkanovski.jpg" /><img
+            src="Imagenes pagina ufc/Yair Rodriguez.jpg" /><br />
+          <p>Alexander Volkanovski vs Yair Rodriguez</p>
+          <br />UFC 290
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC289.html"><img src="Imagenes pagina ufc/Amanda Nunes.jpg" /><img
+            src="Imagenes pagina ufc/Irene Aldana.jpg" /><br />
+          <p>Amanda Nunes vs Irene Aldana</p>
+          <br />UFC 289
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC288.html"><img src="Imagenes pagina ufc/Aljamain Sterling.jpg" /><img
+            src="Imagenes pagina ufc/Henry Cejudo.jpg" /><br />
+          <p>Aljamain Sterling vs Henry Cejudo</p>
+          <br />UFC 288
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC287.html"><img src="Imagenes pagina ufc/Israel Adesanya.jpg" /><img
+            src="Imagenes pagina ufc/Alex Pereira.jpg" /><br />
+          <p>Israel Adesanya vs Alex Pereira 2</p>
+          <br />UFC 287
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC286.html"><img src="Imagenes pagina ufc/Leon Edwards.jpg" /><img
+            src="Imagenes pagina ufc/Kamaru Usman.jpg" /><br />
+          <p>Leon Edwards vs Kamaru Usman 3</p>
+          <br />UFC 286
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC285.html"><img src="Imagenes pagina ufc/Jon Jones.jpg" /><img
+            src="Imagenes pagina ufc/Ciryl Gane.jpg" /><br />
+          <p>Jon Jones vs Ciryl Gane</p>
+          <br />UFC 285
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC284.html"><img src="Imagenes pagina ufc/Islam Makhachev.jpg" /><img
+            src="Imagenes pagina ufc/Alexander Volkanovski.jpg" /><br />
+          <p>Islam Makhachev vs Alexander Volkanovski</p>
+          <br />UFC 284
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC283.html"><img src="Imagenes pagina ufc/Jamahall Hill.jpg" /><img
+            src="Imagenes pagina ufc/Glover Teixeira.jpg" /><br />
+          <p>Jamahall Hill vs Glover Teixeira</p>
+          <br />UFC 283
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC282.html"><img src="Imagenes pagina ufc/Jan Blachowicz.jpg" /><img
+            src="Imagenes pagina ufc/Magomed Ankalaev.jpg" /><br />
+          <p>Jan Blachowicz vs Magomed Ankalaev</p>
+          <br />UFC 282
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC281.html"><img src="Imagenes pagina ufc/Alex Pereira.jpg" /><img
+            src="Imagenes pagina ufc/Israel Adesanya.jpg" /><br />
+          <p>Alex Pereira vs Israel Adesanya</p>
+          <br />UFC 281
+        </a>
+      </div>
+    </div>
+
+    <div class="eventosNumerados">
+      <div>
+        <a href="Carteleras/UFC280.html"><img src="Imagenes pagina ufc/Islam Makhachev.jpg" /><img
+            src="Imagenes pagina ufc/Charles Oliveira.jpg" /><br />
+          <p>Islam Makhachev vs Charles Oliveira</p>
+          <br />UFC 280
+        </a>
+      </div>
+    </div>
+
+    <!-- Agrega más elementos según sea necesario -->
+  </div>
+  <footer id="footer">
+    <div class="content-footer">
+      <label class="lbl-footer">Todos los derechos reservados ©</label>
+    </div>
+  </footer>
 </body>
-</html>
 
+</html>
