--- a/footer.html
+++ b/footer.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="EstiloFooter.css">
-	<title>Footer</title>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="stylesheet" type="text/css" href="EstiloFooter.css" />
+    <title>Footer</title>
 </head>
+
 <body>
-<footer id="footer">
-    <div class="content-footer">
-        <label class="lbl-footer">Todos los derechos reservados ©</label>
-    </div>
-</footer>
+    <footer id="footer">
+        <div class="content-footer">
+            <label class="lbl-footer">Todos los derechos reservados ©</label>
+        </div>
+    </footer>
 </body>
+
 </html>
