--- a/Carteleras.html
+++ b/Carteleras.html
@@ -24,7 +24,7 @@
     <div class="eventosNumerados">
       <div>
         <a href="Carteleras/UFC297.html"><img src="Imagenes pagina ufc/Sean Strickland.jpg" /><img
-            src="Imagenes pagina ufc/Dricus DuPlessis.jpg" /><br />
+            src="Imagenes pagina ufc/Dricus Duplessis.jpg" /><br />
           <p>Sean Strickland vs Dricus Du Plessis</p>
           <br />UFC 297
         </a>
