--- a/Peleadores.html
+++ b/Peleadores.html
@@ -244,7 +244,7 @@
         <div class="peleadores">
             <div class="front">
                 <h2>Dricus Du Plessis</h2>
-                <img src="Imagenes pagina ufc/Dricus DuPlessis.jpg">
+                <img src="Imagenes pagina ufc/Dricus Duplessis.jpg">
                 <h5>Peso Medio</h5>
             </div>
 
