--- a/Peleadores.html
+++ b/Peleadores.html
@@ -254,12 +254,12 @@
                 <p class="record">17-2-0 (W-L-D)</p><br>
                 <div class="contentBox">
                     <div class="buttonBox">
-                        <button class="boton"><a href="Peleadores/Dricus DuPlessis.html">Perfil de atleta</a></button>
+                        <button class="boton"><a href="Peleadores/Dricus Duplessis.html">Perfil de atleta</a></button>
                         <div class="border"></div>
                         <div class="border"></div>
                     </div>
                 </div>
-                <img src="Imagenes pagina ufc/Dricus DuPlessis Completo.jpg">
+                <img src="Imagenes pagina ufc/Dricus Duplessis Completo.jpg">
             </div>
         </div>
 
