--- a/Carteleras.html
+++ b/Carteleras.html
@@ -15,7 +15,7 @@
     <nav>
       <a href="Carteleras.html" class="menu-item left-menu"> Eventos </a>
       <a href="Rankings.html" class="menu-item left-menu"> Rankings </a>
-      <a href="Index.html" class="menu-item ufc-logo"> UFC </a>
+      <a href="index.html" class="menu-item ufc-logo"> UFC </a>
       <a href="Peleadores.html" class="menu-item right-menu"> Peleadores </a>
       <a href="Tienda.html" class="menu-item right-menu"> Tienda </a>
     </nav>
