--- a/Peleadores.html
+++ b/Peleadores.html
@@ -4,7 +4,6 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" href="EstiloPeleadores.css">
-    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
     <title>Peleadores de la UFC</title>
@@ -19,7 +18,7 @@
             <a href="Rankings.html" class="menu-item left-menu">
                 Rankings
             </a>
-            <a href="index.html" class="menu-item ufc-logo">
+            <a href="Index.html" class="menu-item ufc-logo">
                 UFC
             </a>
             <a href="Peleadores.html" class="menu-item right-menu">
@@ -47,8 +46,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Alex Pereira.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Alex Pereira Completo.jpg">
@@ -70,8 +67,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Alexa Grasso.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Alexa Grasso Completo.jpg">
@@ -94,8 +89,6 @@
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Alexander Volkanovski.html">Perfil de
                                 atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Alexander Volkanovski Completo.jpg">
@@ -117,8 +110,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Alexandre Pantoja.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Alexandre Pantoja Completo.jpg">
@@ -140,8 +131,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Aljamain Sterling.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Aljamain Sterling Completo.jpg">
@@ -163,8 +152,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Amanda Nunes.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Amanda Nunes Completo.jpg">
@@ -186,8 +173,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Charles Oliveira.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Charles Oliveira Completo.jpg">
@@ -209,8 +194,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Ciryl Gane.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Ciryl Gane Completo.jpg">
@@ -232,8 +215,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Colby Covington.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Colby Covington Completo.jpg">
@@ -244,7 +225,7 @@
         <div class="peleadores">
             <div class="front">
                 <h2>Dricus Du Plessis</h2>
-                <img src="Imagenes pagina ufc/Dricus Duplessis.jpg">
+                <img src="Imagenes pagina ufc/Dricus DuPlessis.jpg">
                 <h5>Peso Medio</h5>
             </div>
 
@@ -254,12 +235,10 @@
                 <p class="record">17-2-0 (W-L-D)</p><br>
                 <div class="contentBox">
                     <div class="buttonBox">
-                        <button class="boton"><a href="Peleadores/Dricus Duplessis.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
+                        <button class="boton"><a href="Peleadores/Dricus DuPlessis.html">Perfil de atleta</a></button>
                     </div>
                 </div>
-                <img src="Imagenes pagina ufc/Dricus Duplessis Completo.jpg">
+                <img src="Imagenes pagina ufc/Dricus DuPlessis Completo.jpg">
             </div>
         </div>
 
@@ -278,8 +257,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Dustin Poirier.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Dustin Poirier Completo.jpg">
@@ -301,8 +278,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Glover Teixeira.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Glover Teixeira Completo.jpg">
@@ -324,8 +299,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Henry Cejudo.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Henry Cejudo Completo.jpg">
@@ -347,8 +320,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Ilia Topuria.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Ilia Topuria Completo.jpg">
@@ -370,8 +341,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Irene Aldana.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Irene Aldana Completo.jpg">
@@ -393,8 +362,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Islam Makhachev.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Islam Makhachev Completo.jpg">
@@ -417,8 +384,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Israel Adesanya.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Israel Adesanya Completo.jpg">
@@ -440,8 +405,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Jamahall Hill.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Jamahall Hill Completo.jpg">
@@ -463,8 +426,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Jan Blachowicz.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Jan Blachowicz Completo.jpg">
@@ -486,8 +447,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Jiri Prochazka.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Jiri Prochazka Completo.jpg">
@@ -509,8 +468,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Jon Jones.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Jon Jones Completo.jpg">
@@ -532,8 +489,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Justin Gaethje.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Justin Gaethje Completo.jpg">
@@ -555,8 +510,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Kamaru Usman.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Kamaru Usman Completo.jpg">
@@ -578,8 +531,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Leon Edwards.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Leon Edwards Completo.jpg">
@@ -601,8 +552,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Magomed Ankalaev.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Magomed Ankalaev Completo.jpg">
@@ -624,8 +573,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Marlon Vera.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Marlon Vera Completo.jpg">
@@ -647,8 +594,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Sean Omalley.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Sean Omalley Completo.jpg">
@@ -670,8 +615,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Sean Strickland.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Sean Strickland Completo.jpg">
@@ -693,8 +636,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Yair Rodriguez.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Yair Rodriguez Completo.jpg">
@@ -716,8 +657,6 @@
                 <div class="contentBox">
                     <div class="buttonBox">
                         <button class="boton"><a href="Peleadores/Zhang Weili.html">Perfil de atleta</a></button>
-                        <div class="border"></div>
-                        <div class="border"></div>
                     </div>
                 </div>
                 <img src="Imagenes pagina ufc/Zhang Weili Completo.jpg">
