--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <a href="Rankings.html" class="menu-item left-menu">
                 Rankings
             </a>
-            <a href="Index.html" class="menu-item ufc-logo">
+            <a href="index.html" class="menu-item ufc-logo">
                 UFC
             </a>
             <a href="Peleadores.html" class="menu-item right-menu">
