--- a/Peleadores.html
+++ b/Peleadores.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="normalize.css"
+    <link rel="stylesheet" type="text/css" href="normalize.css">
     <link rel="stylesheet" type="text/css" href="EstiloPeleadores.css">
     <link rel="stylesheet" type="text/css" href="EstiloPaginaPrincipal.css">
     <link rel="icon" href="Imagenes pagina ufc\LogoUFC.ico">
