--- a/Tienda.html
+++ b/Tienda.html
@@ -35,15 +35,15 @@
         <div class="remeras">
             <h2>Remeras</h2>
             <div class="producto">
-                <img src="Imagenes Pagina Ufc/Remera UFC Hawaii.jpg" alt="Remera UFC Hawaii">
+                <img src="Imagenes pagina ufc/Remera UFC Hawaii.jpg" alt="Remera UFC Hawaii">
                 <button onclick="agregarAlCarrito('Remera UFC Hawaii', 1)">Agregar al Carrito</button>
             </div>
             <div class="producto">
-                <img src="Imagenes Pagina Ufc/Remera Conor Mcgregor.jpg" alt="Remera Conor Mcgregor">
+                <img src="Imagenes pagina ufc/Remera Conor Mcgregor.jpg" alt="Remera Conor Mcgregor">
                 <button onclick="agregarAlCarrito('Remera Conor Mcgregor', 1)">Agregar al Carrito</button>
             </div>
             <div class="producto">
-                <img src="Imagenes Pagina Ufc/Remera UFC Usa.jpg" alt="Remera UFC Usa">
+                <img src="Imagenes pagina ufc/Remera UFC Usa.jpg" alt="Remera UFC Usa">
                 <button onclick="agregarAlCarrito('Remera UFC Usa', 1)">Agregar al Carrito</button>
             </div>
 
@@ -56,15 +56,15 @@
         <div class="accesorios">
             <h2>Accesorios</h2>
             <div class="producto">
-                <img src="Imagenes Pagina Ufc/Bolso UFC.jpg" alt="Bolso UFC">
+                <img src="Imagenes pagina ufc/Bolso UFC.jpg" alt="Bolso UFC">
                 <button onclick="agregarAlCarrito('Bolso UFC', 1)">Agregar al Carrito</button>
             </div>
             <div class="producto">
-                <img src="Imagenes Pagina Ufc/Cinturon Campeon.jpg" alt="Cinturon Campeon">
+                <img src="Imagenes pagina ufc/Cinturon Campeon.jpg" alt="Cinturon Campeon">
                 <button onclick="agregarAlCarrito('Cinturon Campeon', 1)">Agregar al Carrito</button>
             </div>
             <div class="producto">
-                <img src="Imagenes Pagina Ufc/Gorra UFC.jpg" alt="Gorra UFC">
+                <img src="Imagenes pagina ufc/Gorra UFC.jpg" alt="Gorra UFC">
                 <button onclick="agregarAlCarrito('Gorra UFC', 1)">Agregar al Carrito</button>
             </div>
         </div>
