--- a/Carteleras.html
+++ b/Carteleras.html
@@ -72,7 +72,7 @@
 
     <div class="eventosNumerados">
       <div>
-        <a href="Carteleras/UFC292.html"><img src="Imagenes pagina ufc\Sean Omalley.jpg" /><img
+        <a href="Carteleras/UFC292.html"><img src="Imagenes pagina ufc\Sean O'Malley.jpg" /><img
             src="Imagenes pagina ufc/Aljamain Sterling.jpg" /><br />
           <p>Sean O´Malley vs Aljamain Sterling</p>
           <br />UFC 292
