--- a/Carteleras/UFC292.html
+++ b/Carteleras/UFC292.html
@@ -41,7 +41,7 @@
         <div class="fight-card">
             <a href="https://www.youtube.com/watch?v=m0C_6mzXyxY&pp=ygUUc3RlcmxpbmcgdnMgbydtYWxsZXk%3D" target="_BLANK">
                 <button>
-                    <img src="../Imagenes pagina ufc\Sterling vs Omalley.jpg" alt="Sterling vs Omalley">
+                    <img src="../Imagenes pagina ufc\Sterling vs O'Malley.jpg" alt="Sterling vs O'Malley">
                     <p>Aljamain Sterling vs Sean O´Malley</p>
                 </button>
             </a>
