--- a/Peleadores.html
+++ b/Peleadores.html
@@ -584,7 +584,7 @@
         <div class="peleadores">
             <div class="front">
                 <h2>Sean O'Malley</h2>
-                <img src="Imagenes pagina ufc/Sean Omalley.jpg">
+                <img src="Imagenes pagina ufc/Sean O'Malley.jpg">
                 <h5>Peso Gallo</h5>
             </div>
 
@@ -594,10 +594,10 @@
                 <p class="record">17-1-0 (W-L-D)</p><br>
                 <div class="contentBox">
                     <div class="buttonBox">
-                        <button class="boton"><a href="Peleadores/Sean Omalley.html">Perfil de atleta</a></button>
+                        <button class="boton"><a href="Peleadores/Sean O'Malley.html">Perfil de atleta</a></button>
                     </div>
                 </div>
-                <img src="Imagenes pagina ufc/Sean Omalley Completo.jpg">
+                <img src="Imagenes pagina ufc/Sean O'Malley Completo.jpg">
             </div>
         </div>
 
