--- a/Carteleras/UFC280.html
+++ b/Carteleras/UFC280.html
@@ -58,7 +58,7 @@
             <div class="fight-card">
                 <a href="https://www.youtube.com/watch?v=7nVi0-OMJEM&pp=ygUPeWFuIHZzIG8nbWFsbGV5" target="_BLANK">
                     <button>
-                        <img src="../Imagenes pagina ufc\Yan vs Omalley.jpg" alt="Yan vs Omalley">
+                        <img src="../Imagenes pagina ufc\Yan vs O'Malley.jpg" alt="Yan vs O'Malley">
                         <p>Petr Yan vs Sean O´Malley</p>
                     </button>
                 </a>
