--- a/Peleadores/Sean O'Malley.html
+++ b/Peleadores/Sean O'Malley.html
@@ -40,7 +40,7 @@
             <p class="numeroko">12</p>
             <p class="ko">Victorias por K.O</p>
         </div>
-        <img src="../Imagenes Pagina Ufc/Sean O'Malley Completo.jpg">
+        <img src="../Imagenes pagina Ufc/Sean O'Malley Completo.jpg">
 
 
     </div>
